warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/Brand_Affinity_Score__c.field-meta.xml
<CustomField>
    <fullName>Brand_Affinity_Score__c</fullName>
    <description>Brand affinity component (0-100)</description>
    <label>Brand Affinity Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>