warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/Digital_Presence_Score__c.field-meta.xml
<CustomField>
    <fullName>Digital_Presence_Score__c</fullName>
    <description>Digital presence component (0-100)</description>
    <label>Digital Presence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>