warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/Market_Positioning_Score__c.field-meta.xml
<CustomField>
    <fullName>Market_Positioning_Score__c</fullName>
    <description>Market positioning component (0-100)</description>
    <label>Market Positioning Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>