warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/NBRS_Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>NBRS_Calculated_Date__c</fullName>
    <description>When NBRS was last calculated</description>
    <label>NBRS Calculated Date</label>
    <type>DateTime</type>
</CustomField>