warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/NBRS_Score__c.field-meta.xml
<CustomField>
    <fullName>NBRS_Score__c</fullName>
    <description>Overall NBRS score (0-100)</description>
    <label>NBRS Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>