warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/NBRS_Tier__c.field-meta.xml
<CustomField>
    <fullName>NBRS_Tier__c</fullName>
    <description>Lead tier classification (TIER1=Top, TIER4=Low)</description>
    <label>NBRS Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIER1</fullName>
            </value>
            <value>
                <fullName>TIER2</fullName>
            </value>
            <value>
                <fullName>TIER3</fullName>
            </value>
            <value>
                <fullName>TIER4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>