warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <description>Recommended next action for this lead</description>
    <label>Next Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>