warm-lead-generation/salesforce_metadata/main/default/objects/Lead/fields/Priority_Rank__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rank__c</fullName>
    <description>Ranking among all leads (#1 = highest priority)</description>
    <label>Priority Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>